force-app/main/default/objects/Girdle_Lim_Check__c/Girdle_Lim_Check__c.object-meta.xml
<CustomObject>
    <label>Girdle Lim Check</label>
    <nameField>
        <label>Girdle Lim Check Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Girdle Lim Checks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>