force-app/main/default/objects/Girdle_Lim_Check__c/fields/GirdleMatl__c.field-meta.xml
<CustomField>
    <fullName>GirdleMatl__c</fullName>
    <label>GirdleMatl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>