force-app/main/default/objects/Girdle_Lim_Check__c/fields/MaxPressLL__c.field-meta.xml
<CustomField>
    <fullName>MaxPressLL__c</fullName>
    <label>MaxPressLL</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>