force-app/main/default/objects/Girdle_Lim_Check__c/fields/MaxPressUL__c.field-meta.xml
<CustomField>
    <fullName>MaxPressUL__c</fullName>
    <label>MaxPressUL</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>