force-app/main/default/objects/Girdle_Lim_Check__c/fields/RangeInt__c.field-meta.xml
<CustomField>
    <fullName>RangeInt__c</fullName>
    <label>RangeInt</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>