force-app/main/default/objects/Girdle_Lim_Check__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>GirdleMatl__c</columns>
    <columns>MaxPressLL__c</columns>
    <columns>MaxPressUL__c</columns>
    <columns>RangeInt__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>